@@ -9,6 +9,7 @@ Change Log:
 - Add better error handling to the upgrade routine
 - Fix wrong redirect during setup wizard that ended in "Not allowed to view page" errors
 - Fix some typos in admin pages
+- Rename page "Protected Content" to "Protection Rules"
 
 1.0.0.2
 ----------------------------------------------------------------------
